# rCore

./: .gitignore
os/: .gitignore  Cargo.toml  Makefile
os/src/: batch.rs  common.rs  config.rs  console.rs  debug.rs  entry.asm  lang_items.rs  loader.rs  main.rs  sbi.rs  stack_trace.rs  timer.rs  vars.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: lock.rs  mod.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  processor.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
src/: lang_items.rs  logging.rs  main.rs
user/: .gitignore  Cargo.toml  Makefile
user/src/: lib.rs  syscall.rs
