[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.9"
bitflags = "1.3"
xmas-elf = "0.9"
cfg-if = "1.0"

[features]
default = ["sbrk_lazy_alloc"]
sbrk_lazy_alloc = []
